--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
-
 :root {
   font-family: var(--font-work-sans), sans-serif;
 }
@@ -10,18 +9,17 @@
   --font-work-sans: var(--font-work-sans-local);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-primary: #ff69b4;
-  --color-primary-100: #ffe4f0;
+  --color-primary: #201cff;
+  --color-primary-100: #b2b1fc;
   --color-secondary: #00bcd4;
   --color-black-100: #171717;
   --color-white-100: #f5f5f5;
-  --color-primary-100: #ffe4f1;
   --color-black-200: #2a2a2a;
   --color-ring: var(--ring);
   --color-border: var(--border);
   --shadow-100: 2px 2px 0px 0px rgb(0, 0, 0);
   --shadow-200: 2px 2px 0px 2px rgb(0, 0, 0);
-  --shadow-300: 2px 2px 0px 2px rgb(238, 43, 105);
+  --shadow-300: 2px 2px 0px 2px rgb(43, 53, 238);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -64,9 +62,22 @@
     @apply font-normal text-sm text-white/80;
   }
 
-  .pink_container {
+  .blue_container {
     @apply w-full bg-primary min-h-[530px] flex justify-center items-center flex-col py-10 px-6;
   }
+  .tag-tri::before,
+  .tag-tri::after {
+    @apply content-[''] absolute;
+  }
+
+  .tag-tri::before {
+    @apply top-2 left-2 border-t-[10px] border-t-black border-r-[10px] border-r-transparent;
+  }
+
+  .tag-tri::after {
+    @apply bottom-2 right-2 border-b-[10px] border-b-black border-l-[10px] border-l-transparent;
+  }
+
   .tag {
     @apply bg-secondary px-6 py-3 font-work-sans font-bold rounded-sm uppercase relative;
   }
@@ -196,10 +207,6 @@
     background-size: 5% 100%;
     background-position: center;
     background-repeat: repeat-x;
-  }
-  .tag-tri {
-    @apply before:content-[''] before:absolute before:top-2 before:left-2 before:border-t-[10px] before:border-t-black before:border-r-[10px] before:border-r-transparent;
-    @apply after:content-[''] after:absolute after:bottom-2 after:right-2 after:border-b-[10px] after:border-b-black after:border-l-[10px] after:border-l-transparent;
   }
 }
 
